--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,17 @@
 [build-system]
-requires = ["setuptools"]
+requires = [
+    "setuptools>=60",
+    "setuptools-scm>=8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "microrep"
 version = "0.0.0"
 authors = [{ name="Vincent Lambert", email="vincent.lambert29@gmail.com" }]
-license = { file = "LICENSE" }
+license-files = [ "LICENSE" ]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "MIT",
     "Operating System :: OS Independent",
 ]
 keywords = ["microgesture", "representation", "illustration", "hand", "fingers", "gesture"]
